--- a/source/assets/scss/modules/nav.scss
+++ b/source/assets/scss/modules/nav.scss
@@ -1,3 +1,8 @@
+@import '../settings';
+@import '../../../../node_modules/foundation-sites/scss/util/_mixins.scss';
+// @import '../mixins/colors';
+@import '../mixins/functions';
+
 // Main header - the anchor to all of Seldon
 $duration: $timing-default * 1.5; //settings.scss:281
 
@@ -97,133 +102,133 @@ $duration: $timing-default * 1.5; //settings.scss:281
         }
     }
 }
-.nav {
-    a.link--white {
-        border-bottom: none !important;
-        &:hover {
-            border-bottom: none !important;
-        }
-    }
-    .callout {
-        padding: 0.8rem 1.4rem;
-        margin-bottom: 1rem;
-    }
-    .menu.vertical {
-        li a {
-            line-height: 1.3;
-            padding-top:    0.4rem;
-            padding-bottom: 0.4rem;
-        }
-    }
-    .menu-header { // primary nav items, that are sometimes not links =/
-        // font-weight: $font-weight-mid;
-        color: black(0.8);
-        &:hover {
-            color: $color_prime-alt;
-        }
-    }
-    .submenu {
-        @include shadow-anarchy(2px 2px 6px 0 black(0.2));
-        li a {
-            @include fx-hover-nudge;
-        }
-        border-radius: $global-radius;
-        margin-top: 0.5rem;
-        padding-top:    0.8rem;
-        padding-bottom: 0.8rem;
-        &-divider {
-            border-bottom: 1px solid transparentize($gray-5, 0.8);
-            padding-bottom:    0.5rem;
-            margin-bottom:  0.5rem;
-        }
-        &::before {
-            $tri-size: 10px;
-            @include css-triangle(10px, white, up);
-            position: absolute;
-            top: -$tri-size;
-            left: $tri-size * 8;
-        }
-    }
-    .is-submenu-item {
-        margin-bottom: 0;
-        a {
-            transition: none;
-            transition: color $timing-default linear;
-            color: $gray-3;
-            // font-weight: $font-weight-mid;
-            &:hover {
-                color: $color_prime-alt;
-            }
-        }
-    }
-    .js-dropdown-active {
-        display: inline-block;
-        @include animation (fadeIn 0.3s ease);
-    }
-}
+// .nav {
+//     a.link--white {
+//         border-bottom: none !important;
+//         &:hover {
+//             border-bottom: none !important;
+//         }
+//     }
+//     .callout {
+//         padding: 0.8rem 1.4rem;
+//         margin-bottom: 1rem;
+//     }
+//     .menu.vertical {
+//         li a {
+//             line-height: 1.3;
+//             padding-top:    0.4rem;
+//             padding-bottom: 0.4rem;
+//         }
+//     }
+//     .menu-header { // primary nav items, that are sometimes not links =/
+//         // font-weight: $font-weight-mid;
+//         color: black(0.8);
+//         &:hover {
+//             color: $color_prime-alt;
+//         }
+//     }
+//     .submenu {
+//         @include shadow-anarchy(2px 2px 6px 0 black(0.2));
+//         li a {
+//             @include fx-hover-nudge;
+//         }
+//         border-radius: $global-radius;
+//         margin-top: 0.5rem;
+//         padding-top:    0.8rem;
+//         padding-bottom: 0.8rem;
+//         &-divider {
+//             border-bottom: 1px solid transparentize($gray-5, 0.8);
+//             padding-bottom:    0.5rem;
+//             margin-bottom:  0.5rem;
+//         }
+//         &::before {
+//             $tri-size: 10px;
+//             @include css-triangle(10px, white, up);
+//             position: absolute;
+//             top: -$tri-size;
+//             left: $tri-size * 8;
+//         }
+//     }
+//     .is-submenu-item {
+//         margin-bottom: 0;
+//         a {
+//             transition: none;
+//             transition: color $timing-default linear;
+//             color: $gray-3;
+//             // font-weight: $font-weight-mid;
+//             &:hover {
+//                 color: $color_prime-alt;
+//             }
+//         }
+//     }
+//     .js-dropdown-active {
+//         display: inline-block;
+//         @include animation (fadeIn 0.3s ease);
+//     }
+// }
 .nav-logo { // pairing with svg use symbol, requires express dimensions. Aspect ratio is maintained, but spacing can be weird.
     height: 3rem; //2.3rem;
     width:  7rem; //5.6rem;
 }
-.nav-mobile {
-    .nav-button {
-        @include no-nudge;
-        background-color: black;
-        margin-bottom: 0;
-        &--icon {
-            width:  1.3em;
-            height: 1.3em;
-            vertical-align: middle;
-        } 
-        &--label {
-            @extend .spaced-out;
-            font-size: 70%;
-            margin-right: 0.3rem;
-        }
-    }
-    .menu.vertical {
-        li a {
-            padding: 0.3rem 0.3rem 0.3rem 0;
-        }
-    }
-}
-// ==== desktop nav theming; see .menu stuff at top of this file for defaults.
-.nav-logo--link { // data-theme = dark default
-    color: $gray-1;
-}   
-.nav[data-theme="light"] { // light (light text on dark) | dark (dark text on light backgrounds)
-    .nav-logo--link, .menu-header, .is-active .menu-header {
-        color: white(0.8);
-        // font-weight: $font-weight-regular;
-        transition-property: background-color, color;
-        transition-duration: $timing-default;
-        &:hover, &:active {
-            color: $color_yellow-glow;
-        }
-    }
-    .menu {
-        &-secondary { // this is now preferred solution for secondary stacked navs
-            li a {
-                color: white(0.6);
-                padding: 1rem;
-                transition-property: background-color, color;
-                transition-duration: $timing-default;
-                &:hover {
-                    color: white;
-                    background-color: transparentize($gray-5, 0.5);
-                }
-                &[aria-current="page"] {
-                    color: white;
-                    border-bottom: 3px solid $color_yellow-glow;
-                }
-            }
-        }
-    }
-    // // fix pip color 
-    // .dropdown.menu > li.is-dropdown-submenu-parent > a::after {
-    //     border-color: white(0.3);
-    // }
-}
+// .nav-mobile {
+//     .nav-button {
+//         @include no-nudge;
+//         background-color: black;
+//         margin-bottom: 0;
+//         &--icon {
+//             width:  1.3em;
+//             height: 1.3em;
+//             vertical-align: middle;
+//         } 
+//         &--label {
+//             @extend .spaced-out;
+//             font-size: 70%;
+//             margin-right: 0.3rem;
+//         }
+//     }
+//     .menu.vertical {
+//         li a {
+//             padding: 0.3rem 0.3rem 0.3rem 0;
+//         }
+//     }
+// }
+// // ==== desktop nav theming; see .menu stuff at top of this file for defaults.
+// .nav-logo--link { // data-theme = dark default
+//     color: $gray-1;
+// }   
+// .nav[data-theme="light"] { // light (light text on dark) | dark (dark text on light backgrounds)
+//     .nav-logo--link, .menu-header, .is-active .menu-header {
+//         color: white(0.8);
+//         // font-weight: $font-weight-regular;
+//         transition-property: background-color, color;
+//         transition-duration: $timing-default;
+//         &:hover, &:active {
+//             color: $color_yellow-glow;
+//         }
+//     }
+//     .menu {
+//         &-secondary { // this is now preferred solution for secondary stacked navs
+//             li a {
+//                 color: white(0.6);
+//                 padding: 1rem;
+//                 transition-property: background-color, color;
+//                 transition-duration: $timing-default;
+//                 &:hover {
+//                     color: white;
+//                     background-color: transparentize($gray-5, 0.5);
+//                 }
+//                 &[aria-current="page"] {
+//                     color: white;
+//                     border-bottom: 3px solid $color_yellow-glow;
+//                 }
+//             }
+//         }
+//     }
+//     // // fix pip color 
+//     // .dropdown.menu > li.is-dropdown-submenu-parent > a::after {
+//     //     border-color: white(0.3);
+//     // }
+// }
 .nav-desktop {
     .nav-logo--link {
         padding: 0.2rem 1rem 0.2rem 0.2rem;
@@ -240,3 +245,105 @@ $duration: $timing-default * 1.5; //settings.scss:281
 //     right: auto;
 //     left: 1.5rem;
 // }
+// =================== new nav ==============
+.link-light {
+  border: none;
+  color: $color_yellow-glow;
+  &:hover {
+    color: white;
+  }
+}
+.link-arrow {
+  @extend .link-light;
+  &::after { // svg data-URI of chevron shape
+    content: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 16 14'%3E%3Cpolygon fill='%23fff' points='5.665 1 4 2.645 9.408 8 4 13.355 5.665 15 12.75 8'/%3E%3C/svg%3E");
+    display: inline-block;
+    opacity: 0.3;
+    // width:  0.8em;
+    // height: 0.8em;
+    // margin-top: -2px;
+    // transform-origin: 48%;
+    // position: absolute;
+  }
+}
+// .menu-aim {
+//   ul {
+//     max-width: 1200px;
+//     margin-left: auto;
+//     margin-right: auto;
+//     // overflow: visible;
+//   }
+// }
+.menu-aim__item a {
+    padding: 1.5rem;
+}
+// .menu-aim a {
+//     display: block;
+//     color: blue;
+// }
+.menu-aim__item-name {
+    color: black;
+}
+//.menu-aim a.menu-aim__item:hover,
+.menu-aim__item--active .menu-aim__item-name {
+    color: #1055ff;
+    // background: blue;
+    background: {
+        image: url("data:image/svg+xml;charset=utf8,%3Csvg width='25' height='17' viewBox='0 0 25 17' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M12.5 0L25 17H0L12.5 0z' fill='%233B4145'/%3E%3C/svg%3E");
+        repeat: no-repeat;
+        position: center bottom;
+        size: 14px;
+    }
+}
+.menu-aim .no-child {
+    background: none;
+}
+// .menu-aim--delaying .menu-aim__item-name:hover {
+//     color: blue;
+//     background: none;
+// }
+.menu-aim__item-submenu {
+    display: block;
+    // transition: visibility 0s, opacity 0.2s linear;
+    visibility: hidden;
+    opacity: 0;
+    // transition: opacity 200ms;
+    transition-delay: .2s;
+    position: absolute;
+    top: 62px;
+    left: 0;
+    width: 100%;
+    .button {
+        display: inline-block;
+        width: auto;
+    }
+    a:not(.button) {
+        text-align: initial;
+        padding: initial;
+    }
+    .menu li a {
+        padding: 0.5rem;
+    }
+}
+.menu-aim__item--active .menu-aim__item-submenu {
+    visibility: visible;
+    transition-delay: 0ms;
+    // @include animation (fadeIn 0.3s ease);
+    opacity: 1;
+}
+
+.menu-nav-list {
+    // flex-wrap: wrap;
+    flex-direction: column;
+    li { // not sure why .menu.align-center is trickling down here, setting classes in this nav have no effect...
+        justify-content: left !important;
+        border-radius: 3px;
+        transition: background-color 100ms linear;
+        &:hover {
+            background-color: black;
+        }
+    }
+    li a {
+        @extend .link-light;
+    }
+}
