--- a/source/assets/scss/modules/overrides.scss
+++ b/source/assets/scss/modules/overrides.scss
@@ -263,11 +263,17 @@
         margin-left: 0.2em;
         transform: translate3d(0px, 0.05em, 0);
     }
-    &--white::after {
-        content: url("/assets/icons/inlined/small/icon-chevron-right-white.svg");
+    &--white {
+        color: white;
+        &::after {
+            content: url("/assets/icons/inlined/small/icon-chevron-right-white.svg");
+        }
     }
-    &--yellow::after {
-        content: url("/assets/icons/inlined/small/icon-chevron-right-yellow.svg");
+    &--yellow {
+        color: $color_yellow-glow;
+        &::after {
+            content: url("/assets/icons/inlined/small/icon-chevron-right-yellow.svg");
+        }
     }
     &:hover:after {
         transition: transform $timing-default * 0.5 ease, opacity $timing-default * 0.5 ease;
