--- a/source/seldon/nav.html.slim
+++ b/source/seldon/nav.html.slim
@@ -12,24 +12,24 @@ nav.nav
   .menu-aim
     ul.menu.horizontal.align-center.align-middle
       li.menu-aim__item
-        a.nav-logo--link.no-child href="/" title="Datica Home"
+        a.nav-logo--link.no-child href="/" title="Datica Home" style="padding: 0 1rem;"
           svg id="datica-logo-desktop" class="nav-logo"
             use.symbol-icon xlink:href="#datica-logo-horiz"
         .menu-aim__item-submenu
       - nav_collection.each do | id, nav_section |
         - nav_section["related_entries"].each do | nav_item |
           - unless nav_item.has_key?("show_in_top_nav") && nav_item.show_in_top_nav == false
-            li.menu-aim__item
+            li.menu-aim__item id=nav_item.title_short.parameterize
               a.menu-aim__item-name href = (nav_item.has_key?("section_link_uri") ? nav_item.section_link_uri : nil ) = nav_item.title_short
               .menu-aim__item-submenu.bg-gray-3.z-10
                 .row.align-center
-                  .columns.small-12.medium-4.pad--xl
+                  .columns.small-12.medium-4.pad--lg
                     h3.headline-4 = nav_item.title
                     p.text-small = nav_item.summary
                     - if nav_item.has_key?("section_link_label")
-                      = current_link_to nav_item.title, nav_item.section_link_uri, title: nav_item.title, class: "link-arrow"
+                      = current_link_to nav_item.title, nav_item.section_link_uri, title: nav_item.title, class: "link-arrow link-arrow--yellow"
                   - if nav_item.has_key?("child_data")
-                    .columns.small-12.medium-4.pad--xl
+                    .columns.small-12.medium-4.pad--lg
                       ul.menu.menu-nav-list
                         - nav_item.child_data.each do | child |
                           li
@@ -48,14 +48,16 @@ nav.nav
                     - promo_url = "/#{path}/#{nav_item.section_promo.slug}"
                     - case nav_item.section_promo._meta.content_type_id
                     - when "webinars"
-                      .columns.small-12.medium-4.bg-gray-2.pad--lg
+                      .columns.small-12.medium-4.bg-gray-2.nopad
                         = partial "partials/cards/webinar-poster", :locals => { :entry => data.site.webinars[nav_item.section_promo.id] }
                     - else
                       .columns.small-12.medium-4.bg-gray-2.pad--lg
                         h4.headline-5.menu-aim--promo = nav_item.section_promo.title
                         p.text-small = nav_item.section_promo.summary
                         = partial "partials/snippets/button", :locals => { :label => "Learn More", :url => promo_url, :button_classes => "button small success", :data_track_group => "nav", :item_id => "nav-promo-#{path}", :icon => "icon-angle-right", :icon_align => "right" }
-
+      li.menu-aim__item
+        = partial "partials/snippets/button", :locals => { :label => "Contact Us", :url => "/contact/", :button_classes => "button small", :item_id => "contact", :data_track_group => "nav" }
+        .menu-aim__item-submenu
   / - case_studies = data.site.collections.to_a.select { | id, cust | (id == "3N9NeiDhwcKacuIo0E4iwu") }
   / - case_studies.each do | id, cardgroup |
     .row.align-center
