--- a/source/partials/scripts/_footer.erb
+++ b/source/partials/scripts/_footer.erb
@@ -4,7 +4,7 @@
 <%#= javascript_include_tag "jquery", "foundation.min" %>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/lozad.js/1.7.0/lozad.min.js"></script>
 <%= javascript_include_tag "menu-aim" %>
-<%= javascript_include_tag "nav" %>
+<%#= javascript_include_tag "nav" %>
 
 <%#= javascript_include_tag "nav", "smooth-scroll", "cookie", "sharer", "all" %>
 <%#= javascript_include_tag "all" %>
