--- a/source/assets/scss/modules/nav.scss
+++ b/source/assets/scss/modules/nav.scss
@@ -109,10 +109,9 @@ $duration: $timing-default * 1.5; //settings.scss:281
 }
 .nav {
     .menu-aim .menu.menu-aim__container {
-        padding: 1rem;
         flex-wrap: nowrap;
         flex-direction: column;
-        @include breakpoint (medium-large) {
+        @include breakpoint (large) {
             padding: 0;
             flex-wrap: wrap;
             flex-direction: row;
@@ -186,6 +185,7 @@ $duration: $timing-default * 1.5; //settings.scss:281
 //     left: 1.5rem;
 // }
 // =================== new nav ==============
+
 @mixin link-light {
   border: none;
   color: $color_yellow-glow;
@@ -193,6 +193,10 @@ $duration: $timing-default * 1.5; //settings.scss:281
     color: white;
     border: none;
   }
+}
+.nav-logo { // pairing with svg use symbol, requires express dimensions. Aspect ratio is maintained, but spacing can be weird.
+    height: 2.3rem;
+    width: 5.7rem;
 }
 // .link-arrow {
 //   @include link-light;
@@ -216,25 +220,37 @@ $duration: $timing-default * 1.5; //settings.scss:281
 //   }
 // }
 
-.nav-logo { // pairing with svg use symbol, requires express dimensions. Aspect ratio is maintained, but spacing can be weird.
-    height: 2.3rem;
-    width: 5.7rem;
-}
 
 // .menu-aim a {
 //     display: block;
 //     color: blue;
 // }
 
-.menu-aim__item-submenu { // hide below medium-large
-    display: none; // overriden below for desktop
+
+// mobile menu toggle
+.mobile-toggle { // container, mobile only
+    position: relative;
+    display: block;
+    padding: 1rem;
 }
-@include breakpoint (medium down) {
+
+@include breakpoint (medium-large down) {
+    .mobile-toggle-target {
+        transition: color $timing-default linear, border-color $timing-default linear;
+        padding: 0;
+        display: none; // hidden until active
+        &.is-active {
+            display: block;
+        }
+    }
     .menu-aim__logo {
         margin-bottom: 1.5rem;
     }
     .menu-aim__contact {
-        margin-top: 2rem;
+        padding: 1rem;
+    }
+    .menu-aim__item a:not(.button) {
+        max-width: 30em;
     }
     .menu-aim__item-name {
         font-weight: $font-weight-bold;
@@ -247,11 +263,98 @@ $duration: $timing-default * 1.5; //settings.scss:281
         line-height: 1.3;
     }
 }
+
+// small screen nav
+// .nav-items {
+//     top: 4rem;
+//     display: none;
+//     &.is-active {
+//         display: block;
+//     }
+// }
+#nav-toggle { // toggle button
+    background: transparent;
+    position: absolute;
+    right: 0;
+    top: 40%;
+    height: 50px;
+    width: 50px;
+    cursor: pointer;
+    transform: translate(0%, -50%);
+    & span,
+    & span:before,
+    & span:after {
+        transition: all 0.3s ease-in-out;
+        cursor: pointer;
+        border-radius: 1px;
+        height: 2px;
+        width: 35px;
+        // background: white;
+        position: absolute;
+        left: 0;
+        top: 50%;
+        display: block;
+        content: "";
+    }
+    & span:before {
+      top: -10px;
+    }
+    & span:after {
+      top: 10px;
+    }
+    // &.is-toggled span {
+    //     background-color: transparent;
+    // }
+
+    &.is-toggled span:before,
+    &.is-toggled span:after {
+        top: 0;
+    }
+
+    &.is-toggled span:before {
+        transform: rotate(135deg);
+    }
+
+    &.is-toggled span:after {
+        transform: rotate(-135deg);
+    }
+}
+.nav { // theme the mobile button
+    &[data-theme="light"] {
+        #nav-toggle {
+            & span, & span:before, & span:after {
+                background: white;
+            }
+            &.is-toggled span {
+                background-color: transparent;
+            }
+        }
+    }
+    &[data-theme="dark"] {
+        #nav-toggle {
+            & span, & span:before, & span:after {
+                background: black;
+            }
+            &.is-toggled span {
+                background-color: transparent;
+            }
+        }
+    }
+}
+
+
+.menu-aim__item-submenu { // hide below large
+    display: none; // overriden below for desktop
+}
 // ======== DESKTOP ONLY STYLES / megamenu ==========
-@include breakpoint (medium-large) {
+@include breakpoint (large) {
     .menu-aim__item a {
         padding: 1.5rem;
     }
+    // .menu-aim__item-name {
+    //     font-weight: $font-weight-bold;
+    //     font-size: 1.1rem;
+    // }
     //.menu-aim a.menu-aim__item:hover,
     .menu-aim__item--active .menu-aim__item-name {
         color: #1055ff;
@@ -260,7 +363,7 @@ $duration: $timing-default * 1.5; //settings.scss:281
             image: url("data:image/svg+xml;charset=utf8,%3Csvg width='25' height='17' viewBox='0 0 25 17' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M12.5 0L25 17H0L12.5 0z' fill='%233B4145'/%3E%3C/svg%3E");
             repeat: no-repeat;
             position: center bottom;
-            size: 14px;
+            size: 16px;
         }
     }
     .menu-aim .no-child {
